# abinslib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-docs.yml  lint.yml  publish.yml  test.yml  validation.yml
dev/: README.md  snakemake.yml
dev/phonon_data/config/: config.yml
dev/phonon_data/data/: GaSb.phonon
dev/phonon_data/results/: .dummy.txt
dev/phonon_data/workflow/: Snakefile
dev/phonon_data/workflow/envs/: mantid.yml  mlip.yml
dev/phonon_data/workflow/scripts/: mlip_phonons.py  opt_ethanol.py  phonon_to_json.py  phonopy_fc_modes.py  run_abins.py
dev/validation/: pixi.toml
dev/validation/config/: config.yml
dev/validation/workflow/: Snakefile
dev/validation/workflow/envs/: abins-lib.yml  abinslib.yml  mantid.yml
dev/validation/workflow/scripts/: plot_fundamentals.py  write_almost_isotropic_fundamentals.py  write_isotropic_fundamentals.py  write_mantid_fundamentals.py  write_mantid_second_order.py  write_second_order.py
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/: custom.css
docs/source/development/: index.rst
docs/source/tutorials/: GALLERY_HEADER.rst  plot_demo.py  plot_tosca.py
src/abinslib/: __init__.py  almost_isotropic_incoherent.py  bose.py  data.py  displacements.py  isotropic_incoherent.py  util.py
tests/: conftest.py  test_abinslib.py  test_almost_isotropic_incoherent.py  test_bose.py  test_data.py  test_displacements.py  test_isotropic_incoherent.py  test_util.py
tests/data/: GaSb_abins_0k_B.npz  GaSb_abins_100k_B.npz  GaSb_abins_100k_isotropic_raw.npz  GaSb_abins_10k_isotropic_raw.npz  GaSb_abins_isotropic_dw.npz  GaSb_abins_isotropic_raw.npz  GaSb_isotropic_binning.npz  GaSb_modes_q2.npy  GaSb_qpoint_phonon_modes.json  abins-q2-1_4-dump.npy  abins-q2-dump.npy  abins-spectra-dw.json  abins-spectra-no-dw-coarse.json  abins-spectra-no-dw.json  abins-spectra-unit-q.json  ethanol_abins_100k_isotropic_raw.npz  ethanol_abins_10k_isotropic_raw.npz  ethanol_modes_q2.npy  ethanol_qpoint_phonon_modes.json
tests/regression_data/test_almost_isotropic_incoherent/: test_calculate_almost_isotropic_incoherent_combination_spectra_100_ethanol_False_.npz  test_calculate_almost_isotropic_incoherent_combination_spectra_100_ethanol_True_.npz  test_calculate_almost_isotropic_incoherent_combinations_GaSb_.npz  test_calculate_almost_isotropic_incoherent_fundamentals_GaSb_.npz  test_calculate_isotropic_incoherent_spectra_100_GaSb_.npz  test_calculate_isotropic_incoherent_spectra_100_ethanol_.npz  test_calculate_isotropic_incoherent_spectra_10_GaSb_.npz  test_calculate_isotropic_incoherent_spectra_10_ethanol_.npz  test_calculate_isotropic_incoherent_spectrum_100_ethanol_.npz  test_mantid_like_combination_spectra_100_GaSb_False_.npz  test_q_scaling_almost_isotropic_incoherent_combination_spectra_100_GaSb_False_.npz
tests/regression_data/test_bose/: test_factors_regression_celsius_.csv  test_factors_regression_kelvin_.csv
tests/regression_data/test_displacements/: test_dw_regression_GaSb_0_.npz  test_dw_regression_GaSb_100_.npz
tests/regression_data/test_isotropic_incoherent/: test_calculate_isotropic_incoherent_spectrum_100_GaSb_GaSb_abins_100k_isotropic_raw_npz_.npz  test_calculate_isotropic_incoherent_spectrum_100_ethanol_ethanol_abins_100k_isotropic_raw_npz_.npz  test_calculate_isotropic_incoherent_spectrum_10_GaSb_GaSb_abins_10k_isotropic_raw_npz_.npz  test_calculate_isotropic_incoherent_spectrum_10_ethanol_ethanol_abins_10k_isotropic_raw_npz_.npz  test_isotropic_dw_GaSb_GaSb_abins_isotropic_dw_npz_.npz  test_q_scaling_isotropic_incoherent_spectrum_100_GaSb_GaSb_abins_100k_isotropic_raw_npz_.npz  test_q_scaling_isotropic_incoherent_spectrum_10_GaSb_GaSb_abins_10k_isotropic_raw_npz_.npz  test_q_scaling_isotropic_incoherent_spectrum_10_ethanol_ethanol_abins_10k_isotropic_raw_npz_.npz
tests/test_almost_isotropic_incoherent/: test_calculate_isotropic_incoherent_spectrum_100_GaSb_GaSb_.npz  test_calculate_isotropic_incoherent_spectrum_10_GaSb_.npz  test_calculate_isotropic_incoherent_spectrum_10_ethanol_.npz
tests/test_isotropic_incoherent/: test_calculate_isotropic_incoherent_spectrum_no_cross_section_GaSb_GaSb_.npz  test_q_scaling_isotropic_incoherent_spectrum_100_ethanol_ethanol_abins_100k_isotropic_raw_npz_.npz
