[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "abins-lib"
dynamic = ["version"]
requires-python = ">=3.11"

dependencies = [
    "euphonic >= 1.5.1,<2",
    "resins == 0.1.0",
]

[dependency-groups]
test = [
    "pytest>=9.0,<10.0",
    "pytest-regressions[num]~=2.10.0",
    "pytest-cov~=7.0",
]
lint = ["ruff==0.15.11"]
dev = [
    {include-group = 'test'},
    {include-group = 'lint'},
]

[project.urls]
Repository = "https://github.com/pace-neutrons/abins-lib"

[tool.setuptools.dynamic]
version = {attr = "abinslib.__version__"}

[tool.setuptools.packages.find]
where =  ["src"]

[tool.pytest]
addopts = ["--import-mode=importlib"]
minversion = "9.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
       "F",
       "E",
       "UP",
       "COM",     # flake8-commas
       "PT",      # flake8-pytest-style
       "I",
       "C4",
       "A",
       "T10",
       "Q",
       "N",
]
ignore = [
       "COM812",
       "N806"
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
