[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "abinslib"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "euphonic >= 2.0.0,<3",
    "resins == 0.1.0",
]

[project.optional-dependencies]
tutorial = ["pooch ~= 1.9"]

[dependency-groups]
test = [
    "pytest>=9.0,<10.0",
    "pytest-regressions[num]~=2.10.0",
    "pytest-cov~=7.0",
]
lint = ["ruff==0.15.11"]
doc = [
    "sphinx~=9.0.0",
    "furo==2025.12.19",
    "sphinx-autoapi~=3.8.0",
    "sphinx-gallery~=0.21.0",
    "myst-parser~=5.1.0",
    "matplotlib~=3.11.0",
    "pooch ~= 1.9",
]
dev = [
    {include-group = 'test'},
    {include-group = 'lint'},
]

[project.urls]
Repository = "https://github.com/pace-neutrons/abinslib"

[tool.coverage.paths]
source = ["src",
          "*/site-packages",
          ]

[tool.coverage.run]
source = ["src"]

[tool.setuptools.packages.find]
where =  ["src"]

[tool.pytest]
addopts = ["--import-mode=importlib"]
minversion = "9.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
       "D",
       "DOC",
       "F",
       "E",
       "UP",
       "COM",     # flake8-commas
       "PT",      # flake8-pytest-style
       "I",
       "C4",
       "A",
       "T10",
       "Q",
       "N",
]
ignore = [
       "COM812",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "kT",
]

[tool.ruff.lint.per-file-ignores]
# Ease docstring requirements for unit tests and workflows
"tests/*" = ["D", "DOC"]
"docs/source/tutorials/*" = [
    "D",
    "DOC",
    "E402",  # Allow python import closer to first use in tutorial
    ]

[tool.ruff.lint.pydocstyle]
convention = "google"
